changed project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trailblaze-backend",
+  "name": "starterkit-backend-typescript",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
